--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/birds-eye.ipynb)"
+    "[![Jupyter Notebook](https://img.shields.io/badge/Jupyter%20Notebook-orange)](https://github.com/laminlabs/lamin-usecases/blob/main/docs/scrna.ipynb)"
    ]
   },
   {
@@ -53,20 +53,20 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mouse lymph node cells: Detmar22"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ln.track()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mouse lymph node cells: Detmar22"
    ]
   },
   {
@@ -81,7 +81,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -156,7 +158,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that 24 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+    "We're seeing that 43 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{note}\n",
+    "\n",
+    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records.\n",
+    "\n",
+    "In this example:\n",
+    "- 19 records are created from Bionty with additional metadata and source tracking\n",
+    "- while the rest 24 record are created with a single ensembl_gene_id field\n",
+    "```"
    ]
   },
   {
@@ -222,7 +238,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(adata.obs)\n",
+    "features = ln.Feature.from_df(\n",
+    "    adata.obs\n",
+    ")  # Feature.from_df create feature records with type auto-populated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "ln.save(features)"
    ]
   },
@@ -273,10 +299,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(adata.obs[\"sex\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"age\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"genotype\"], \"name\")\n",
-    "ln.Label.validate(adata.obs[\"immunophenotype\"], \"name\");"
+    "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
+    "    ln.Label.validate(adata.obs[col], \"name\")"
    ]
   },
   {
@@ -290,7 +314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In addition to what's already in the file, we'd like to link this file with a feature 'species':"
+    "In addition to what's already in the file, we'd like to link this file with external features:"
    ]
   },
   {
@@ -299,7 +323,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ln.Feature.validate(\"species\", \"name\")\n",
     "lb.Species.validate(\"mouse\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Modality.validate(\"rna\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's try standardizing synonyms that can't be validated:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(\"assay\", \"name\")\n",
+    "lb.ExperimentalFactor.validate(\"scRNA-seq\", \"name\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrna_name = lb.ExperimentalFactor.standardize(\"scRNA-seq\")\n",
+    "scrna_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.validate(scrna_name, \"name\");"
    ]
   },
   {
@@ -364,6 +434,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Warning message suggests to assign modality:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_feature_set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modality = ln.Modality.filter(name=\"rna\").one()\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Link metadata"
    ]
   },
@@ -392,7 +507,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(species, feature=\"species\")\n",
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
     "file.add_labels(dev_stages + tissues + cell_types)"
    ]
   },
@@ -654,6 +770,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file.features"
    ]
   },
@@ -685,7 +812,8 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels([lb.settings.species], feature=\"species\")\n",
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
     "file.add_labels(cell_types + efs + tissues)"
    ]
   },
@@ -779,7 +907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pbcm68k_validated = pbcm68k[:, validated]"
+    "pbcm68k_validated = pbcm68k[:, validated].copy()"
    ]
   },
   {
@@ -852,7 +980,7 @@
    },
    "outputs": [],
    "source": [
-    "file_pbcm68k = ln.File.from_anndata(\n",
+    "file = ln.File.from_anndata(\n",
     "    pbcm68k_validated, description=\"10x reference pbmc68k\", var_ref=lb.Gene.symbol\n",
     ")"
    ]
@@ -863,7 +991,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.save()"
+    "file.save()"
    ]
   },
   {
@@ -875,7 +1003,7 @@
    "outputs": [],
    "source": [
     "cell_types = lb.CellType.from_values(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file_pbcm68k.add_labels(cell_types)"
+    "file.add_labels(cell_types)"
    ]
   },
   {
@@ -884,7 +1012,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.describe()"
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
    ]
   },
   {
@@ -893,7 +1022,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_pbcm68k.view_lineage()"
+    "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "var_feature_set.modality = modality\n",
+    "var_feature_set.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.view_lineage()"
    ]
   },
   {
