📝 Enable default_field for inspect and validate

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -158,7 +158,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We're seeing that 43 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's register them:"
+    "We're seeing that 43 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's inspect them to see what to do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect logging says 19 of the non-validated ensembl_gene_ids can be found in Bionty reference."
    ]
   },
   {
@@ -167,7 +183,7 @@
    "source": [
     "```{note}\n",
     "\n",
-    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records.\n",
+    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records via `.from_values()`.\n",
     "\n",
     "In this example:\n",
     "- 19 records are created from Bionty with additional metadata and source tracking\n",
@@ -222,7 +238,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(adata.obs.columns, ln.Feature.name);"
+    "ln.Feature.validate(adata.obs.columns);"
    ]
   },
   {
@@ -265,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(adata.obs.columns, ln.Feature.name);"
+    "ln.Feature.validate(adata.obs.columns);"
    ]
   },
   {
@@ -281,9 +297,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.validate(adata.obs[\"developmental_stage\"], \"name\")\n",
-    "lb.CellType.validate(adata.obs[\"cell_type\"], \"name\")\n",
-    "lb.Tissue.validate(adata.obs[\"tissue\"], \"name\");"
+    "lb.ExperimentalFactor.validate(adata.obs[\"developmental_stage\"])\n",
+    "lb.CellType.validate(adata.obs[\"cell_type\"])\n",
+    "lb.Tissue.validate(adata.obs[\"tissue\"]);"
    ]
   },
   {
@@ -300,7 +316,7 @@
    "outputs": [],
    "source": [
     "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
-    "    ln.Label.validate(adata.obs[col], \"name\")"
+    "    ln.Label.validate(adata.obs[col])"
    ]
   },
   {
@@ -323,8 +339,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(\"species\", \"name\")\n",
-    "lb.Species.validate(\"mouse\", \"name\");"
+    "ln.Feature.validate(\"species\")\n",
+    "lb.Species.validate(\"mouse\");"
    ]
   },
   {
@@ -333,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Modality.validate(\"rna\", \"name\");"
+    "ln.Modality.validate(\"rna\");"
    ]
   },
   {
@@ -349,8 +365,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(\"assay\", \"name\")\n",
-    "lb.ExperimentalFactor.validate(\"scRNA-seq\", \"name\");"
+    "ln.Feature.validate(\"assay\")\n",
+    "lb.ExperimentalFactor.validate(\"scRNA-seq\");"
    ]
   },
   {
@@ -369,7 +385,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.ExperimentalFactor.validate(scrna_name, \"name\");"
+    "lb.ExperimentalFactor.validate(scrna_name);"
    ]
   },
   {
@@ -495,7 +511,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "species = lb.Species.from_values([\"mouse\"], \"name\")[0]\n",
     "dev_stages = lb.ExperimentalFactor.from_values(adata.obs[\"developmental_stage\"], \"name\")\n",
     "cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"], \"name\")\n",
     "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")"
@@ -518,10 +533,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "labels = ln.Label.from_values(adata.obs[\"sex\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"age\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"genotype\"])\n",
-    "labels += ln.Label.from_values(adata.obs[\"immunophenotype\"])\n",
+    "labels = []\n",
+    "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
+    "    labels += ln.Label.from_values(adata.obs[col])\n",
+    "\n",
     "file.add_labels(labels)"
    ]
   },
@@ -612,14 +627,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = ln.Feature.validate(conde22.obs.columns, \"name\")"
+    "validated = ln.Feature.validate(conde22.obs.columns)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2 features are not validated: donor, assay"
+    "1 feature is not validated: donor"
    ]
   },
   {
@@ -635,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's register them:"
+    "Let's register it:"
    ]
   },
   {
@@ -669,7 +684,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(conde22.obs.columns, \"name\");"
+    "ln.Feature.validate(conde22.obs.columns);"
    ]
   },
   {
@@ -678,9 +693,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(conde22.obs.cell_type, \"name\")\n",
-    "lb.ExperimentalFactor.validate(conde22.obs.assay, \"name\")\n",
-    "lb.Tissue.validate(conde22.obs.tissue, \"name\");"
+    "lb.CellType.validate(conde22.obs.cell_type)\n",
+    "lb.ExperimentalFactor.validate(conde22.obs.assay)\n",
+    "lb.Tissue.validate(conde22.obs.tissue);"
    ]
   },
   {
@@ -698,7 +713,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(conde22.obs[\"donor\"], \"name\");"
+    "ln.Label.validate(conde22.obs[\"donor\"]);"
    ]
   },
   {
@@ -707,15 +722,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = ln.Label.from_values(conde22.obs[\"donor\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
     "ln.save(donors)"
    ]
   },
@@ -725,7 +732,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(conde22.obs[\"donor\"], \"name\");"
+    "ln.Label.validate(conde22.obs[\"donor\"]);"
    ]
   },
   {
@@ -902,6 +909,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case, we only want to register data with validated genes:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -932,7 +946,7 @@
     "lb.settings.auto_save_parents = False\n",
     "\n",
     "# inspect shows none of the terms are mappable\n",
-    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
+    "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"])\n",
     "\n",
     "# here we search the cell type names from the public ontology and grab the top match\n",
     "# then add the cell type names from the pbcm68k as synonyms\n",
@@ -962,7 +976,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.CellType.validate(pbcm68k_validated.obs[\"cell_type\"], \"name\");"
+    "lb.CellType.validate(pbcm68k_validated.obs[\"cell_type\"]);"
    ]
   },
   {
