--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -511,9 +511,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "dev_stages = lb.ExperimentalFactor.from_values(adata.obs[\"developmental_stage\"], \"name\")\n",
     "cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"], \"name\")\n",
-    "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")"
+    "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")\n",
+    "\n",
+    "file.add_labels(dev_stages, feature=\"developmental_stage\")\n",
+    "file.add_labels(cell_types, feature=\"cell_type\")\n",
+    "file.add_labels(tissues, feature=\"tissue\")"
    ]
   },
   {
@@ -522,22 +536,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
-    "file.add_labels(dev_stages + tissues + cell_types)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "labels = []\n",
     "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
     "    labels += ln.Label.from_values(adata.obs[col])\n",
-    "\n",
-    "file.add_labels(labels)"
+    "    file.add_labels(labels, feature=col)"
    ]
   },
   {
@@ -801,6 +802,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.add_labels(lb.settings.species, feature=\"species\")\n",
+    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "tags": []
    },
@@ -819,9 +830,9 @@
    },
    "outputs": [],
    "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")\n",
-    "file.add_labels(cell_types + efs + tissues)"
+    "file.add_labels(cell_types, \"cell_type\")\n",
+    "file.add_labels(efs, \"assay\")\n",
+    "file.add_labels(tissues, \"tissue\")"
    ]
   },
   {
@@ -831,7 +842,7 @@
    "outputs": [],
    "source": [
     "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
-    "file.add_labels(donors)"
+    "file.add_labels(donors, feature=\"donor\")"
    ]
   },
   {
