--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -537,7 +537,7 @@
    "outputs": [],
    "source": [
     "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
-    "    labels += ln.Label.from_values(adata.obs[col])\n",
+    "    labels += ln.Label.from_values(adata.obs[col], field=\"name\")\n",
     "    file.add_labels(labels, feature=col)"
    ]
   },
