--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -181,14 +181,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```{note}\n",
-    "\n",
-    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records via `.from_values()`.\n",
-    "\n",
-    "In this example:\n",
-    "- 19 records are created from Bionty with additional metadata and source tracking\n",
-    "- while the rest 24 record are created with a single ensembl_gene_id field\n",
-    "```"
+    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records via `.from_values()`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "non_validated = adata.var.index[~validated]\n",
+    "non_validated_records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
+    "ln.save(non_validated_records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rest 24, we create records with a single ensembl_gene_id field:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)"
    ]
   },
   {
@@ -197,9 +225,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "non_validated = adata.var.index[~validated]\n",
-    "non_validated_records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
-    "ln.save(non_validated_records)"
+    "new_genes = adata.var.index[~validated]\n",
+    "new_records = [\n",
+    "    lb.Gene(ensembl_gene_id=id, species=lb.settings.species) for id in new_genes\n",
+    "]\n",
+    "ln.save(new_records)"
    ]
   },
   {
@@ -413,7 +443,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
@@ -723,7 +757,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
+    "donors = [ln.Label(name=name) for name in conde22.obs[\"donor\"].unique()]\n",
     "ln.save(donors)"
    ]
   },
@@ -747,7 +781,9 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "tags": []
+    "tags": [
+     "hide-output"
+    ]
    },
    "outputs": [],
    "source": [
@@ -1028,7 +1064,7 @@
    "outputs": [],
    "source": [
     "cell_types = lb.CellType.from_values(pbcm68k_validated.obs[\"cell_type\"], \"name\")\n",
-    "file.add_labels(cell_types)"
+    "file.add_labels(cell_types, \"cell_type\")"
    ]
   },
   {
