🔥 Removed mouse dataset from scrna use cases

--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,7 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This illustrates how to manage scRNA-seq datasets in absence of a custom schema.\n",
+    "This illustrates how to manage scRNA-seq datasets in absence of a [custom schema](https://lamin.ai/docs/schemas).\n",
     "\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
@@ -53,545 +53,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Mouse lymph node cells: Detmar22"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.track()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We're working with mouse data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "lb.settings.species = \"mouse\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
-    "\n",
-    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's look at a scRNA-seq count matrix in form of an `AnnData` object:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "adata = ln.dev.datasets.anndata_mouse_sc_lymph_node(\n",
-    "    populate_registries=True  # pre-populate registries to simulate an used instance\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "adata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validate genes in `.var`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We're seeing that 43 gene identifiers can't be validated (not currently in the Gene registry). We'd like to validate all features in this dataset, hence, let's inspect them to see what to do:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Inspect logging says 19 of the non-validated ensembl_gene_ids can be found in Bionty reference."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "ensembl_gene_ids that are present in Bionty public ontology will create ontology-coupled records via `.from_values()`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "non_validated = adata.var.index[~validated]\n",
-    "non_validated_records = lb.Gene.from_values(non_validated, lb.Gene.ensembl_gene_id)\n",
-    "ln.save(non_validated_records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The rest 24, we create records with a single ensembl_gene_id field:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "new_genes = adata.var.index[~validated]\n",
-    "new_records = [\n",
-    "    lb.Gene(ensembl_gene_id=id, species=lb.settings.species) for id in new_genes\n",
-    "]\n",
-    "ln.save(new_records)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now all genes pass validation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validate metadata in `.obs`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Similarly, for the metadata, we'd like to validate them as features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(adata.obs.columns);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "None of them exist, so let's register them:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "features = ln.Feature.from_df(\n",
-    "    adata.obs\n",
-    ")  # Feature.from_df create feature records with type auto-populated"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.save(features)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now they are all validated:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(adata.obs.columns);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Some of the metadata labels can be typed using dedicated registries:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.ExperimentalFactor.validate(adata.obs[\"developmental_stage\"])\n",
-    "lb.CellType.validate(adata.obs[\"cell_type\"])\n",
-    "lb.Tissue.validate(adata.obs[\"tissue\"]);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Metadata that can't be typed with dedicated registries, we use the {class}`~lamindb.Label` registry:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
-    "    ln.Label.validate(adata.obs[col])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Validate external metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In addition to what's already in the file, we'd like to link this file with external features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(\"species\")\n",
-    "lb.Species.validate(\"mouse\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Modality.validate(\"rna\");"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's try standardizing synonyms that can't be validated:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ln.Feature.validate(\"assay\")\n",
-    "lb.ExperimentalFactor.validate(\"scRNA-seq\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "scrna_name = lb.ExperimentalFactor.standardize(\"scRNA-seq\")\n",
-    "scrna_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.ExperimentalFactor.validate(scrna_name);"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Register ![](https://img.shields.io/badge/Register-10b981) "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Register data"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "When we create a `File` object from an `AnnData`, we'll automatically link its feature sets and get information about unmapped categories:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "hide-output"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "file = ln.File.from_anndata(\n",
-    "    adata, description=\"Detmar22\", var_ref=lb.Gene.ensembl_gene_id\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.save()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file now has two linked feature sets:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Warning message suggests to assign modality:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_feature_set = file.features.get_feature_set(\"var\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "var_feature_set"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modality = ln.Modality.filter(name=\"rna\").one()\n",
-    "var_feature_set.modality = modality\n",
-    "var_feature_set.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Link metadata"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let's add labels to corresponding features:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dev_stages = lb.ExperimentalFactor.from_values(adata.obs[\"developmental_stage\"], \"name\")\n",
-    "cell_types = lb.CellType.from_values(adata.obs[\"cell_type\"], \"name\")\n",
-    "tissues = lb.Tissue.from_values(adata.obs[\"tissue\"], \"name\")\n",
-    "\n",
-    "file.add_labels(dev_stages, feature=\"developmental_stage\")\n",
-    "file.add_labels(cell_types, feature=\"cell_type\")\n",
-    "file.add_labels(tissues, feature=\"tissue\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for col in [\"sex\", \"age\", \"genotype\", \"immunophenotype\"]:\n",
-    "    labels = ln.Label.from_values(adata.obs[col], field=\"name\")\n",
-    "    file.add_labels(labels, feature=col)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The file is now queryable by everything we linked:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.describe()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -613,7 +74,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Transform ![](https://img.shields.io/badge/Transform-10b981)"
+    "### Transform ![](https://img.shields.io/badge/Transform-10b981)\n",
+    "\n",
+    "(Here we skip steps of data transformations, which often includes filtering, normalizing, or formatting data.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s look at a scRNA-seq count matrix in form of an AnnData object:"
    ]
   },
   {
@@ -644,7 +114,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Validate ![](https://img.shields.io/badge/Validate-10b981) "
+    "### Validate ![](https://img.shields.io/badge/Validate-10b981)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Validate genes in `.var`"
    ]
   },
   {
@@ -654,6 +131,13 @@
    "outputs": [],
    "source": [
     "lb.Gene.validate(conde22.var.index, lb.Gene.ensembl_gene_id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Validate metadata in `.obs`"
    ]
   },
   {
@@ -774,7 +258,86 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Validate external metadata\n",
+    "\n",
+    "In addition to what’s already in the file, we’d like to link this file with external features:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(\"species\")\n",
+    "lb.Species.validate(\"human\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modalities = ln.Modality.lookup()\n",
+    "modalities.rna"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s try standardizing synonyms that can’t be validated:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Feature.validate(\"assay\")\n",
+    "lb.ExperimentalFactor.validate(\"scRNA-seq\");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scrna_name = lb.ExperimentalFactor.standardize(\"scRNA-seq\")\n",
+    "scrna_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.ExperimentalFactor.validate(scrna_name);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Register ![](https://img.shields.io/badge/Register-10b981) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Register data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When we create a File object from an AnnData, we’ll automatically link its feature sets and get information about unmapped categories:"
    ]
   },
   {
@@ -805,7 +368,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file has the following linked feature sets:"
+    "The file has the following 3 linked feature sets:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can further annotate your feature set with modality:"
    ]
   },
   {
@@ -815,24 +392,22 @@
    "outputs": [],
    "source": [
     "var_feature_set = file.features.get_feature_set(\"var\")\n",
-    "var_feature_set.modality = modality\n",
+    "var_feature_set.modality = modalities.rna\n",
     "var_feature_set.save()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "file.features"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's now link observational metadata."
+    "#### Link metadata"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's now link observational metadata by adding labels to corresponding features."
    ]
   },
   {
@@ -879,6 +454,13 @@
    "source": [
     "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
     "file.add_labels(donors, feature=\"donor\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The file is now queryable by everything we linked:"
    ]
   },
   {
@@ -983,15 +565,11 @@
    "execution_count": null,
    "metadata": {
     "tags": [
-     "hide-cell"
+     "hide-output"
     ]
    },
    "outputs": [],
    "source": [
-    "# don't recurse through ontology hierarchies to speed up CI\n",
-    "# recommend to set to True\n",
-    "lb.settings.auto_save_parents = False\n",
-    "\n",
     "# inspect shows none of the terms are mappable\n",
     "lb.CellType.inspect(pbcm68k_validated.obs[\"cell_type\"])\n",
     "\n",
@@ -1014,7 +592,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now, all cell types should be validated:"
+    "Now, all cell types are validated:"
    ]
   },
   {
