--- a/docs/scrna.ipynb
+++ b/docs/scrna.ipynb
@@ -19,8 +19,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This illustrates how to manage scRNA-seq datasets in absence of a [custom schema](https://lamin.ai/docs/schemas).\n",
-    "\n",
+    "This illustrates how to manage scRNA-seq datasets.\n",
     "```{toctree}\n",
     ":maxdepth: 1\n",
     ":hidden:\n",
@@ -50,6 +49,15 @@
    "source": [
     "import lamindb as ln\n",
     "import lnschema_bionty as lb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.track()"
    ]
   },
   {
@@ -96,7 +104,7 @@
    },
    "outputs": [],
    "source": [
-    "conde22 = ln.dev.datasets.anndata_human_immune_cells(\n",
+    "adata = ln.dev.datasets.anndata_human_immune_cells(\n",
     "    populate_registries=True  # pre-populate registries to simulate an used instance\n",
     ")"
    ]
@@ -107,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conde22"
+    "adata"
    ]
   },
   {
@@ -130,7 +138,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lb.Gene.validate(conde22.var.index, lb.Gene.ensembl_gene_id);"
+    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We’re seeing that 148 gene identifiers can’t be validated (not currently in the Gene registry). We’d like to validate all features in this dataset, hence, let’s inspect them to see what to do:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "inspect_result = lb.Gene.inspect(adata.var.index, lb.Gene.ensembl_gene_id)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inspect logging says 35 of the non-validated ensembl_gene_ids can be found in Bionty reference. Let's register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "records_bionty = lb.Gene.from_values(\n",
+    "    inspect_result.non_validated, lb.Gene.ensembl_gene_id\n",
+    ")\n",
+    "ln.save(records_bionty)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The rest 113 aren't present in the current Ensembl assembly (e.g. [ENSG00000112096](https://www.ensembl.org/Homo_sapiens/Gene/Idhistory?g=ENSG00000112096)). \n",
+    "\n",
+    "We'd still like to register them, so let's create Gene records with those ensembl_gene_ids:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "validated = lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id, mute=True)\n",
+    "nonval_ensembl_ids = adata.var.index[~validated]\n",
+    "new_records = [\n",
+    "    lb.Gene(ensembl_gene_id=ens_id, species=lb.settings.species)\n",
+    "    for ens_id in nonval_ensembl_ids\n",
+    "]\n",
+    "ln.save(new_records)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now all genes pass validation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lb.Gene.validate(adata.var.index, lb.Gene.ensembl_gene_id);"
    ]
   },
   {
@@ -146,7 +241,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validated = ln.Feature.validate(conde22.obs.columns)"
+    "adata.obs.columns"
    ]
   },
   {
@@ -162,7 +257,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conde22.obs.loc[:, ~validated].head()"
+    "validated = ln.Feature.validate(adata.obs.columns)"
    ]
   },
   {
@@ -178,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "features = ln.Feature.from_df(conde22.obs)"
+    "features = ln.Feature.from_df(adata.obs)"
    ]
   },
   {
@@ -194,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All metadata columns are now validated:"
+    "All metadata columns are now validated as feature:"
    ]
   },
   {
@@ -203,27 +298,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(conde22.obs.columns);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.CellType.validate(conde22.obs.cell_type)\n",
-    "lb.ExperimentalFactor.validate(conde22.obs.assay)\n",
-    "lb.Tissue.validate(conde22.obs.tissue);"
+    "ln.Feature.validate(adata.obs.columns);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As neither the core schema nor `lnschema_bionty` have a `Donor` table, we're using `Label` to track donor ids.\n",
+    "Next, let's validate the corresponding labels of each feature:\n",
     "\n",
-    "Donor labels are not validated, so we register them:"
+    "Some of the metadata labels can be typed using dedicated registries: (e.g. bionty offers ontology-based registries for biological entities)"
    ]
   },
   {
@@ -232,7 +316,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(conde22.obs[\"donor\"]);"
+    "validated = lb.CellType.validate(adata.obs.cell_type)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Register non-validated cell types from Bionty:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": [
+     "hide-output"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "nonval_cell_type_records = lb.CellType.from_values(\n",
+    "    adata.obs.cell_type[~validated], \"name\"\n",
+    ")\n",
+    "ln.save(nonval_cell_type_records)"
    ]
   },
   {
@@ -241,7 +348,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "donors = [ln.Label(name=name) for name in conde22.obs[\"donor\"].unique()]\n",
+    "lb.ExperimentalFactor.validate(adata.obs.assay)\n",
+    "lb.Tissue.validate(adata.obs.tissue);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Metadata that can’t be typed with dedicated registries (in this example, we didn't mount a [custom schema](https://lamin.ai/docs/schemas) that contains a Donor registry), we can use the {class}`~lamindb.Label` registry to track donor ids."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ln.Label.validate(adata.obs[\"donor\"]);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Donor labels are not validated, so let's register them:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "donors = [ln.Label(name=name) for name in adata.obs[\"donor\"].unique()]\n",
     "ln.save(donors)"
    ]
   },
@@ -251,7 +391,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Label.validate(conde22.obs[\"donor\"]);"
+    "ln.Label.validate(adata.obs[\"donor\"]);"
    ]
   },
   {
@@ -260,7 +400,7 @@
    "source": [
     "#### Validate external metadata\n",
     "\n",
-    "In addition to what’s already in the file, we’d like to link this file with external features:"
+    "In addition to what’s already in the file, we’d like to link this file with external features including \"species\" and \"assay\":"
    ]
   },
   {
@@ -270,24 +410,21 @@
    "outputs": [],
    "source": [
     "ln.Feature.validate(\"species\")\n",
-    "lb.Species.validate(\"human\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modalities = ln.Modality.lookup()\n",
-    "modalities.rna"
+    "ln.Feature.validate(\"assay\");"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let’s try standardizing synonyms that can’t be validated:"
+    "Validate corresponding labels of these features:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes we don't remember what the term is called exactly, search can help:"
    ]
   },
   {
@@ -296,8 +433,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ln.Feature.validate(\"assay\")\n",
-    "lb.ExperimentalFactor.validate(\"scRNA-seq\");"
+    "lb.ExperimentalFactor.search(\"scRNA-seq\").head(2)"
    ]
   },
   {
@@ -306,17 +442,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scrna_name = lb.ExperimentalFactor.standardize(\"scRNA-seq\")\n",
-    "scrna_name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lb.ExperimentalFactor.validate(scrna_name);"
+    "scrna = lb.ExperimentalFactor.filter(id=\"068T1Df6\").one()"
    ]
   },
   {
@@ -351,7 +477,7 @@
    "outputs": [],
    "source": [
     "file = ln.File.from_anndata(\n",
-    "    conde22, description=\"Conde22\", var_ref=lb.Gene.ensembl_gene_id\n",
+    "    adata, description=\"Conde22\", var_ref=lb.Gene.ensembl_gene_id\n",
     ")"
    ]
   },
@@ -368,12 +494,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The file has the following 3 linked feature sets:"
+    "The file has the following 2 linked feature sets:"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "file.features"
    ]
@@ -392,6 +520,7 @@
    "outputs": [],
    "source": [
     "var_feature_set = file.features.get_feature_set(\"var\")\n",
+    "modalities = ln.Modality.lookup()\n",
     "var_feature_set.modality = modalities.rna\n",
     "var_feature_set.save()"
    ]
@@ -413,47 +542,46 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "cell_types = lb.CellType.from_values(adata.obs.cell_type, field=\"name\")\n",
+    "efs = lb.ExperimentalFactor.from_values(adata.obs.assay, field=\"name\")\n",
+    "tissues = lb.Tissue.from_values(adata.obs.tissue, field=\"name\")\n",
+    "donors = ln.Label.from_values(adata.obs[\"donor\"])\n",
+    "\n",
+    "file.add_labels(cell_types, \"cell_type\")\n",
+    "file.add_labels(efs, \"assay\")\n",
+    "file.add_labels(tissues, \"tissue\")\n",
+    "file.add_labels(donors, feature=\"donor\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file.features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that adding labels to an external feature will create an external feature set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "file.add_labels(lb.settings.species, feature=\"species\")\n",
-    "file.add_labels(lb.ExperimentalFactor.filter(name=scrna_name).one(), feature=\"assay\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "cell_types = lb.CellType.from_values(conde22.obs.cell_type, field=\"name\")\n",
-    "efs = lb.ExperimentalFactor.from_values(conde22.obs.assay, field=\"name\")\n",
-    "tissues = lb.Tissue.from_values(conde22.obs.tissue, field=\"name\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "file.add_labels(cell_types, \"cell_type\")\n",
-    "file.add_labels(efs, \"assay\")\n",
-    "file.add_labels(tissues, \"tissue\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "donors = ln.Label.from_values(conde22.obs[\"donor\"])\n",
-    "file.add_labels(donors, feature=\"donor\")"
+    "file.add_labels(scrna, feature=\"assay\")"
    ]
   },
   {
